2008-05-26  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Templates/FileTemplate.cs,
	  MonoDevelop.Ide.Templates/FileDescriptionTemplate.cs,
	  MonoDevelop.Ide.Templates/SingleFileDescriptionTemplate.cs,
	  MonoDevelop.Ide.Templates/ResourceFileDescriptionTemplate.cs,
	  MonoDevelop.Ide.Templates/FileTemplateReference.cs: Properly
	  propagate file creation errors. Fixes bug 361349 - Choosing "No" to
	  overwriting an existing file pops up "Invalid file name" dialog.
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.NewFileDialog.cs,
	  gtk-gui/gui.stetic: Avoid auto-closing of the dialog when clicking
	  on OK. This is handled manually.

2008-05-26  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui/RootWorkspace.cs: Avoid crashing if there is a
	  problem when loading a parser database. Fixes bug 358124 - Code
	  completion prevents project loading.

2008-05-23  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui/RootWorkspace.cs: Moved code for getting a
	  wrapper solution (when opening a single project) to ProjectService.

2008-05-22  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui/SdiWorkspaceLayout.cs: Fix bug 393671 - Creating
	  a new empty text file from a freshly loaded MD (no projects loaded)
	  throws a NRE.

2008-05-22  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectNodeBuilder.cs: Refresh
	  the project when any property changes.

2008-05-22  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.addin.xml, MonoDevelop.Ide.Gui/ProjectOperations.cs:
	  Show the "Options" command for solution folders, and make sure the
	  solution is saved when the options are changed.

2008-05-22  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui/ProjectOperations.cs: Merged the extension points
	  for project and solution option panels into a single extension
	  point. A single extension point will now be used for all kinds of